--- a/PsychicSally/PsychicSally.csproj
+++ b/PsychicSally/PsychicSally.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Mvc, Version=4.0.0.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,9 +44,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileStorage.cs" />
+    <Compile Include="IHIghScoreStorage.cs" />
+    <Compile Include="HighScore.cs" />
+    <Compile Include="InMemoryStorage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PsychicSally.cs" />
+    <Compile Include="Score.cs" />
+    <Compile Include="Scoring.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
